[tool.poetry]
name = "ocean-pv"
version = "0.1.0"
description = "A website that can measures your personality through questions"
authors = ["IgnisDa <ignisda2001@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django-crispy-forms = "^1.9.1"
django-widget-tweaks = "^1.4.8"
django-countries = "^6.1.2"
plotly = "^4.8.1"
gunicorn = "^20.0.4"
python-decouple = "^3.3"
requests = "^2.23.0"
argon2-cffi = "^20.1.0"
django = "^3.2.18"
whitenoise = "^5.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^3.9.0"
pytest-xdist = "^1.32.0"
pytest-cov = "^2.9.0"
selenium = "^3.141.0"
autopep8 = "^1.5.3"
sphinx = "^3.1.0"
sphinx_rtd_theme = "^0.5.0"
flake8 = "^3.8.3"
rstcheck = "^3.3.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
